--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "license": "MIT",
   "preferGlobal": true,
-  "type": "module",
+ //"type": "module",
   "engines": {
     "node": "> 16.13.1"
   },
